Función para obtner las coordenadas de los clicks | Color Button Css |

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Overlay Form</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./main.js" type="text/javascript"></script>
 </head>
 <body>
     <form action="">
@@ -33,12 +32,25 @@
             $input.addEventListener('blur', blur);
         });
 
+        $overlay.addEventListener('click', (event) => {
+            console.log(event);
+            $overlay.classList.remove('is-active');
+            const $anInput = document.elementFromPoint(event.clientX, event.clientY);
+            if($anInput.tagName === 'INPUT'){
+                $anInput.focus();
+            }
+        });
+
         function focus(event){
             console.log('focus');
+            event.target.classList.add('is-active');
+            $overlay.classList.add('is-active');
         }
 
         function blur(event){
             console.log('blur');
+            event.target.classList.remove('is-active');
+            // $overlay.classList.remove('is-active');
         }
     </script>
 </body>
